--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html lang="en" ng-app="hrAnalyzer" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html lang="en" ng-app="hrAnalyzer" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html lang="en" ng-app="hrAnalyzer" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" ng-app="hrAnalyzer" class="no-js"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Angular-RequireJS sample app</title>
+        <title>HR Analyzer</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/html5-boilerplate/css/normalize.css">
     <link rel="stylesheet" href="lib/html5-boilerplate/css/main.css">
+
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.min.css"/>
+
+    <link rel='stylesheet' href='css/font.css'>
     <link rel="stylesheet" href="css/app.css"/>
+
     <script src="lib/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-    <h1>AngularJS + RequireJS</h1>
+    <h1>HR Analyzer</h1>
     <ul class="menu">
-        <li><a href="#/view1">view1</a></li>
-        <li><a href="#/view2">view2</a></li>
+        <li><a ui-sref="state1">State 1</a></li>
+        <li><a ui-sref="state2">State 2</a></li>
     </ul>
 
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div ng-view></div>
+    <div ui-view></div>
 
-    <div>AngularJS + RequireJS seed app: v<span app-version></span></div>
+    <div>HR Analyzer, Version <button class="btn btn-xs btn-primary"><span app-version></span></button></div>
     <script data-main="js/main" src="lib/requirejs/require.js"></script>        
 </body>
 </html>
