--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,12 +9,16 @@
         <title>HR Analyzer</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- 3rd style -->
     <link rel="stylesheet" href="lib/html5-boilerplate/css/normalize.css">
     <link rel="stylesheet" href="lib/html5-boilerplate/css/main.css">
 
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="lib/angular-grid/ng-grid.min.css"/>
 
+    <!-- app related -->
     <link rel='stylesheet' href='css/font.css'>
     <link rel="stylesheet" href="css/app.css"/>
 
