--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -29,6 +29,7 @@
     <ul class="menu">
         <li><a ui-sref="state1">State 1</a></li>
         <li><a ui-sref="state2">State 2</a></li>
+        <li><a ui-sref="employee">Employee</a></li>
     </ul>
 
     <!--[if lt IE 7]>
