config restangular and impl a grid structure for employee

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,7 +38,13 @@
 
     <div ui-view></div>
 
-    <div>HR Analyzer, Version <button class="btn btn-xs btn-primary"><span app-version></span></button></div>
+    <br>
+    <div>
+        <span>HR Analyzer, Version</span>
+        <button class="btn btn-xs btn-primary">
+            <span app-version></span>
+        </button>
+    </div>
     <script data-main="js/main" src="lib/requirejs/require.js"></script>        
 </body>
 </html>
