division view basic structure

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,11 +25,18 @@
     <script src="lib/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-    <h1>HR Analyzer</h1>
+    <div class="navbar navbar-inverse nrb">
+        <a class="navbar-brand" href="#">HR Analyzer<sup> beta</sup></a>
+    </div>
+
     <ul class="menu">
-        <li><a ui-sref="state1">State 1</a></li>
-        <li><a ui-sref="state2">State 2</a></li>
-        <li><a ui-sref="employee">Employee</a></li>
+        <li><a ui-sref="division">Divisions</a></li>
+        <li><a ui-sref="department">Departments</a></li>
+        <li><a ui-sref="group">Groups</a></li>
+        <li><a ui-sref="team">Teams</a></li>
+        <li><a ui-sref="title">Titles</a></li>
+        <li><a ui-sref="rank">Ranks</a></li>
+        <li><a ui-sref="employee">Employees</a></li>
     </ul>
 
     <!--[if lt IE 7]>
