define service and introduce select2

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="lib/angular-grid/ng-grid.min.css"/>
+    <link rel="stylesheet" href="lib/select2/select2.css">
 
     <!-- app related -->
     <link rel='stylesheet' href='css/font.css'>
