--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -53,6 +53,34 @@
             <span app-version></span>
         </button>
     </div>
-    <script data-main="js/main" src="lib/requirejs/require.js"></script>        
+
+    <!-- 3rd dependencies -->
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/lodash/dist/lodash.min.js"></script>
+    <script src="lib/angular/angular.js"></script>
+    <script src="lib/restangular/dist/restangular.min.js"></script>
+    <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="lib/angular-grid/build/ng-grid.min.js"></script>
+    <script src="lib/select2/select2.min.js"></script>
+    <script src="lib/angular-ui-select2/src/select2.js"></script>
+
+    <!-- application dependencies -->
+    <script src="js/app.js"></script>
+    <script src="js/config.js"></script>
+
+    <!-- controllers -->
+    <script src="js/controllers/divisionCtrl.js"></script>
+    <script src="js/controllers/employeeCtrl.js"></script>
+
+    <!-- services -->
+    <script src="js/services/basicDataService.js"></script>
+
+    <!-- filters -->
+    <script src="js/filters/basicFilters.js"></script>
+
+    <!-- directives -->
+    <script src="js/directives/basicDirectives.js"></script>
+
 </body>
 </html>
