select cascading for orgs

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,7 +25,7 @@
 
     <script src="lib/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
-<body>
+<body ng-controller="commonController">
     <div class="navbar navbar-inverse nrb">
         <a class="navbar-brand" href="#">HR Analyzer<sup> beta</sup></a>
     </div>
@@ -70,6 +70,7 @@
     <script src="js/config.js"></script>
 
     <!-- controllers -->
+    <script src="js/controllers/commonCtrl.js"></script>
     <script src="js/controllers/divisionCtrl.js"></script>
     <script src="js/controllers/employeeCtrl.js"></script>
 
